--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./src/styles.css">
     <title>Speed Typing Game</title>
 </head>
 <body>
@@ -62,6 +62,6 @@
         <div>Copyright &copy; Ghasty, 2022, All rights reservered.</div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="./src/renderer.js"></script>
 </body>
 </html>
